added favicon, updated footer and more

--- a/drink.html
+++ b/drink.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
+      
+		<!-- favicon -->
+	    <link rel="shortcut icon" href="https://img.icons8.com/dotty/80/ceb4b7/cocktail.png" type="image/x-icon">
+
+   
     <title>Drink</title>
 
     <!-- external CSS link -->
@@ -47,9 +53,10 @@
 
     <footer>
         <p>
-            Drinks Directory website coded by Mohid Alam / Alamicrodev for Api usage challenge. 
+            Drinks Directory website coded by Mohid Alam / Alamicrodev. Source: <a target="_blank" href="https://github.com/Alamicrodev/DrinksDirectory-Site">Github Repo</a> 
         </p>
     </footer>
+
 
 </body>
 </html>
