--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     	<meta name="description" content="This is where your description goes">
     	<meta name="viewport" content="width=device-width,initial-scale=1">
 		<meta name="keywords" content="one, two, three">
+        
+		<!-- favicon -->
+	    <link rel="shortcut icon" href="https://img.icons8.com/dotty/80/ceb4b7/cocktail.png" type="image/x-icon">
 
+		<!-- title -->
 		<title>Drinks Directory</title>
 
+		
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
@@ -47,7 +52,7 @@
 		
         <footer>
 			<p>
-				Drinks Directory website coded by Mohid Alam / Alamicrodev for Api usage challenge. 
+				Drinks Directory website coded by Mohid Alam / Alamicrodev. Source: <a target="_blank" href="https://github.com/Alamicrodev/DrinksDirectory-Site">Github Repo</a> 
 			</p>
 		</footer>
 
